# SystemC_tutorial

./: CMakeLists.txt  README.md  exor.h  main.cpp  mon.h  nand.h  stim.h
channels/: CMakeLists.txt  main.cpp  producer.h  stacK_if.h
exor/: CMakeLists.txt  exor.h  main.cpp  stim.h
hierarchical_channels/: consumer.h  stack.h
primitive_channels/: CMakeLists.txt  consumer.h  fifo.h  fifo_if.h  main.cpp  producer.h
